	Using (exec traydevice ...) & to launch traydevice
	Using 'udisks --eject' instead of '/usr/bin/eject' in udisksvm.xml
2012-01-26
        * 1.5-0 :
	Rollback of the change to launch traydevice with exec
	Remove automount for optical disks
	The mounting/unmounting for them is still under traydevice control
	as is the ejection of unmounted optical disks
2012-05-13
        * 1.6-1 :
	Don't give eject choice for mounted optical disks
	they must be unmounted before ejection is possible)
	Blank optical disks are now under traydevice control for ejection
	or mounting after burning an iso file
	but the label will not be seen until ejection/insertion of the disk)
2012-05-21
        * 1.7-1 :
	Added ntfs filesystem type
2012-06-05
        * 1.8-1 :
	Rewriting of the script in Python2
	It now uses the dbus interface to UDisks, instead of the 'udisks'
	command (but the 'udisks' command is still used by traydevice)
2012-06-16
        * 1.9-1 :
	Added some errors management
	Added redirection to /dev/null at traydevice command lines
2012-06-23
        * 1.10-1 :
	Rewriting of the script in Python3
	It uses the UDisks DBus API with the GDBus part of the GIO module
	of GLib, via GObject-Introspection
	usage: udisksvm [-h] [-v] [-n] [-d] traydconf
	Added command lines options:
	   positional arguments:
	     traydconf      configuration file for traydevice
	                    default: /usr/share/udisksvm/udisksvm.xml
	   optional arguments:
	     -h, --help     show help message and exit
	     -v, --version  show program's version number and exit
	     -n, --noauto   do not automount
	     -d, --debug    show internal infos
2012-06-30
        * 1.11-1 :
	The 'traydevice' utility is replaced with 'traydvm'
	'traydvm' is a python3 script which uses gobject-introspection for
	GIO, GLib and Gtk3
	It has no configuration file and a predefined simple popup menu
	with only 'Mount', 'Unmount' and 'Eject' actions
	It is the last stage before migrating to UDisks2