@@ -1,7 +1,7 @@
 # Maintainer: Antoine Lubineau <antoine@lubignon.info>
 
 pkgname=dnsperf
-pkgver=1.0.1.0
+pkgver=2.0.0.0
 pkgrel=1
 pkgdesc="Tools that measure performance of authoritative Domain Name services"
 arch=('i686' 'x86_64')
@@ -9,7 +9,7 @@ url="http://www.nominum.com/resources/measurement-tools"
 license=('GPL')
 depends=('bind')
 source=("ftp://ftp.nominum.com/pub/nominum/dnsperf/$pkgver/dnsperf-src-$pkgver-1.tar.gz")
-sha256sums=('2876529516e3600d903e850c81f76adf7a7bec9969a20afa6d08f0f671f27893')
+sha256sums=('23d486493f04554d11fca97552e860028f18c5ed6e35348e480a7448fa8cfaad')
 
 build() {
   cd "$srcdir/$pkgname-src-$pkgver-1"
