@@ -2,7 +2,7 @@
 
 pkgname=mutt-sidebar
 pkgver=1.5.21
-pkgrel=3
+pkgrel=4
 pkgdesc='Small but very powerful text-based mail client'
 url='http://www.mutt.org/'
 license=('GPL')
@@ -12,7 +12,7 @@ conflicts=('mutt')
 optdepends=('smtp-forwarder: to send mail')
 depends=('gpgme' 'ncurses' 'openssl' 'libsasl' 'gdbm' 'libidn' 'mime-types' 'krb5')
 source=("ftp://ftp.mutt.org/mutt/devel/mutt-${pkgver}.tar.gz"
-"http://patch-tracker.debian.org/patch/series/dl/mutt/1.5.21-5/mutt-patched/sidebar"
+"http://patch-tracker.debian.org/patch/series/dl/mutt/1.5.21-6/mutt-patched/sidebar"
 "http://dbg.download.sourcemage.org/grimoire/codex/stable/mail/mutt/patches/trash_folder/trash_folder-1.5.18.patch.bz2"
 "build.patch"
 "sidebar-PATCHES.patch")
@@ -56,4 +56,4 @@ md5sums=('a29db8f1d51e2f10c070bf88e8a553fd'
          '24c5626910e9e24357dd00bc99d37f3f'
          '9d95c08295f8ec5171f774f776ef8413'
          'e902fd103fd0c97347d923f3ca8f1554'
-         '33209cc61a7c5dd57f3d380b9c0aa983')
+         '3f6799c31866a5a2f986dedbddbf5ac3')
