@@ -2,4 +2,4 @@ diff -Naur mutt-1.5.21-org/PATCHES mutt-1.5.21/PATCHES
 --- mutt-1.5.21-org/PATCHES	2008-03-19 21:07:06.000000000 +0100
 +++ mutt-1.5.21/PATCHES	2012-03-14 20:07:43.310867671 +0100
 @@ -0,0 +1 @@
-+sidebar-1.5.21-5 (debian-version)
++sidebar-1.5.21-6 (debian-version)
