@@ -33,8 +33,7 @@ build() {
   git clone "$srcdir/$_gitname" "$srcdir/$_gitname-build"
   cd "$srcdir/$_gitname-build"
 
-  # radeontop doesn’t seem to support Arch’s standard LDFLAGS
-  unset LDFLAGS
+  sed -i 's/$(LDFLAGS) $(obj)/$(obj) $(LDFLAGS)/' Makefile
   make
 }
 
