@@ -1,4 +1,4 @@
-@@ -28,7 +28,7 @@ LDFLAGS += -lncurses
+@@ -28,17 +28,14 @@ LDFLAGS += -lncurses
  
  all: $(bin)
  
@@ -6,8 +6,9 @@
 +$(obj): $(wildcard *.h)
  
  $(bin): $(obj)
- 	gcc -o $(bin) $(CFLAGS) $(LDFLAGS) $(obj)
-@@ -36,9 +36,6 @@ $(bin): $(obj)
+-	gcc -o $(bin) $(CFLAGS) $(LDFLAGS) $(obj)
++	gcc -o $(bin) $(CFLAGS) $(obj) $(LDFLAGS)
+ 
  clean:
  	rm -f *.o $(bin)
  
