@@ -11,7 +11,7 @@ depends=('ncurses' 'xf86-video-ati')
 source=("https://github.com/clbr/radeontop/tarball/v$pkgver"
         'Makefile.patch')
 sha256sums=('9a5091f65adb6231d528e141c8e5f94d43c9555048ce0541900578f4f3795677'
-            '8ec2c50e5b3951a8b753597b43a205dad1cf826d89e757c9d343f8233b1063d6')
+            '64399742e0490ccd16200f4132c8da5272920bb2f031662e4e500577bb903d79')
 
 build() {
   cd "$srcdir/clbr-$pkgname-"*
@@ -26,8 +26,6 @@ build() {
 #endif
 EOF
 
-  # radeontop doesn’t seem to support Arch’s standard LDFLAGS
-  unset LDFLAGS
   make
 }
 
