@@ -3,32 +3,32 @@
 # 
 # a GUI UDisks wrapper: udisksvm 
 # 
-# It is generally run in the backgroud when a WM starts,
-# and wait for USB devices being plugged in
+# It is generally run in the backgroud when a window manager starts,
+# and wait for USB devices being plugged in, or a CD/DVD being inserted
 # -------------------------------------------------------------------------
 # a systray utility: traydvm 
 # 
-# It is called by udisksvm when a device is plugged in
-# and show an icon in the system tray, with a right-click menu
+# It is called by udisksvm when a device is plugged in, or a CD/DVD inserted
+# and show an icon in the system tray, featuring a right-click menu
 # -------------------------------------------------------------------------
 # INFOS ABOUT THE SCRIPTS ARE GIVEN IN: /usr/share/udisksvm/README
 # -------------------------------------------------------------------------
 # 
 # Maintainer: Bernard Baeyens (berbae)  <berbae52 at sfr dot fr>
 pkgname=udisksvm
-pkgver=1.11
-pkgrel=2
+pkgver=2.0
+pkgrel=1
 pkgdesc="GUI UDisks wrapper for removable media"
 arch=('any')
 url='https://bbs.archlinux.org/viewtopic.php?id=112397'
 license=('GPL')
-depends=('python' 'gobject-introspection' 'gtk3' 'udisks' 'python-gobject')
+depends=('python' 'gtk3' 'udisks2' 'python-gobject')
 optdepends=('ntfs-3g: for mounting ntfs disk with write option')
 install=udisksvm.install
 changelog=ChangeLog
 source=("https://github.com/berbae/udisksvm/raw/master/$pkgname-$pkgver.tar.gz")
 
-sha1sums=('dcd8200ef3614abc4273035b9c59b05e43a89e13')
+sha1sums=('3f4e5df3078916e08fd899878fc62de0b2ae943d')
 
 package() {
   cd $srcdir
