@@ -5,13 +5,13 @@ This package contains two scripts which work together:
 
 a GUI UDisks wrapper: udisksvm 
 
-It is generally run in the backgroud when a WM starts,
-and wait for USB devices being plugged in
+It is generally run in the backgroud when a window manager starts,
+and wait for USB devices being plugged in, or a CD/DVD being inserted
 -------------------------------------------------------------------------
 a systray utility: traydvm 
 
-It is called by udisksvm when a device is plugged in
-and show an icon in the system tray, with a right-click menu
+It is called by udisksvm when a device is plugged in, or a CD/DVD inserted
+and show an icon in the system tray, featuring a right-click menu
 -------------------------------------------------------------------------
 INFOS ABOUT THE SCRIPTS ARE GIVEN IN: /usr/share/udisksvm/README
 -------------------------------------------------------------------------
