@@ -73,3 +73,6 @@
 	It has no configuration file and a predefined simple popup menu
 	with only 'Mount', 'Unmount' and 'Eject' actions
 	It is the last stage before migrating to UDisks2
+2012-07-08
+        * 2.0-1 :
+	Porting to UDisks2
